# FLVK

./: .gitignore  CMakeLists.txt  README.md
src/: compile_shaders.bat  fl_app.cpp  fl_app.hpp  fl_device.cpp  fl_device.hpp  fl_pipeline.cpp  fl_pipeline.hpp  fl_window.cpp  fl_window.hpp  logger.h  main.cpp
src/shaders/: simple_shader.vert  simple_shader.vert.spv
